--- a/css.css
+++ b/css.css
@@ -1,3 +1,13 @@
+/*
+html,body {
+		width:  100%;
+		height: 100%;
+		margin: 0px;
+		color: #ffffff;
+	    font-family: georgia, verdana, arial, sans-serif;
+}
+*/
+
 body {
         font-family: georgia, verdana, arial, sans-serif;
         margin: 15px;
